tests/regression/errors/less_than_complex.eff
let h = (handler val x -> x) ;;
let g = (handler val x -> x) ;;

(1, 2, [h]) < (1, 2, [g]) ;; (* This breaks *)
